# rebalax

./: .gitignore  Cargo.toml  PRIVACY.md  README.md  index.html  leptosfmt.toml  styles.css  update-version.sh
.github/workflows/: android.yml  linux.yml  pr.yml
locales/: de.json  en.json
src/: app.rs  components.rs  functions.rs  main.rs  menu.rs  rebalancer.rs  tests.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
