[package]
name = "rebalax-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
leptos-use = { version = "0.16.0-beta", default-features = false, features = ["storage", "docs"] }
log = "0.4.27"
console_log = "1.0.0"
codee = { version = "0.3", features = ["json_serde", "base64", "prost"] }
strum = "0.27.1"
strum_macros = "0.27.1"
reactive_stores = "0.2.2"

[workspace]
members = ["src-tauri"]
